--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.5, 3.6, 3.7, 3.8, 3.9, '3.10']
-        django-version: [2.2, 2.2.8, 3.0, 3.1, 3.2, 4.0]
+        python-version: [3.9, '3.10']
+        django-version: [3.2, 4.0]
         exclude:
           - python-version: 3.5
             django-version: 2.2.8
